--- a/frontend/src/Page_styles/AssetCapture.css
+++ b/frontend/src/Page_styles/AssetCapture.css
@@ -54,7 +54,7 @@
 .form-entry{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-end;
     height: 100%;
     width: 100%;
     align-items: center;
