--- a/frontend/src/Page_styles/User.css
+++ b/frontend/src/Page_styles/User.css
@@ -60,9 +60,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url(../Images/login.jpg);
-  background-size: cover;
-  background-position: center;
+/*   background: url(../Images/login.jpg); */
+/*   background-size: cover; */
+/*   background-position: center; */ */
   
 }
 .menus{
