--- a/frontend/src/Page_styles/User.css
+++ b/frontend/src/Page_styles/User.css
@@ -40,7 +40,7 @@
 }
 .change-panel{
   width: 35%;
-  background: #636363;
+  background: blue;
   /* background: url(../Images/Blue.jpg);
   background-size: cover;
   background-position: center;
