--- a/frontend/src/Page_styles/User.css
+++ b/frontend/src/Page_styles/User.css
@@ -62,7 +62,7 @@
   justify-content: center;
 /*   background: url(../Images/login.jpg); */
 /*   background-size: cover; */
-/*   background-position: center; */ */
+/*   background-position: center; */ 
   
 }
 .menus{
