--- a/frontend/src/Page_styles/MyProfile.css
+++ b/frontend/src/Page_styles/MyProfile.css
@@ -11,11 +11,19 @@
     height: 8%;
     width: 90%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     color: #565656;
     /* padding-left: 20px; */
+}
+.logout-btn{
+    border-radius: 10px;
+    font-size: 12px;
+    padding: 5px;
+    border: none;
+    box-shadow: 2px 2px 5px rgba(67, 71, 85, 0.27);
 }
 .personal-Profile{
     display: flex;
