--- a/frontend/src/Page_styles/AssetCapture.css
+++ b/frontend/src/Page_styles/AssetCapture.css
@@ -88,3 +88,26 @@
     font-family: "Roboto", sans-serif;
     font-weight: 500;
 }
+.custom-DatePicker{
+    outline: none;
+    box-shadow: none;
+    border: none;
+    height: 50%;
+    width: 50% !important;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    border-radius: 10px;
+}
+.react-date-picker__inputGroup{
+    padding: 0 !important;
+}.react-date-picker__inputGroup input{
+    width: 30% !important;
+    padding: 0 !important;
+    box-shadow: none !important;
+    text-align: center !important;
+}
+.react-date-picker__wrapper{
+    border: none !important;
+    outline: none;
+    box-shadow: none;
+}
+
