--- a/frontend/src/Page_styles/AssetCapture.css
+++ b/frontend/src/Page_styles/AssetCapture.css
@@ -36,7 +36,8 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    gap:20px;
+/*     justify-content: space-between; */
     word-spacing: 5px;
 }
 .form-heading p{
