--- a/frontend/src/Page_styles/AssetCapture.css
+++ b/frontend/src/Page_styles/AssetCapture.css
@@ -37,7 +37,7 @@
     align-items: center;
     flex-direction: row;
     gap:20px;
-    justify-content: flex-end;
+    justify-content: flex-start;
     word-spacing: 5px;
 }
 .form-heading p{
