--- a/frontend/src/Page_styles/Login.css
+++ b/frontend/src/Page_styles/Login.css
@@ -79,7 +79,7 @@ h2{
     border-radius: 15px;
     border: none;
     cursor: pointer;
-    color:#ffffff;
+    background-color:#ffffff;
 }
 .foet{
     text-decoration: none;
