--- a/frontend/src/Component_styles/Sidebar.css
+++ b/frontend/src/Component_styles/Sidebar.css
@@ -9,23 +9,20 @@ h1{
 }
 ul{
     height: 100%;
-    padding-left: 20px;
+    width:100%;
+/*     padding-left: 20px; */
     display: flex;
     flex-direction: column;
+    align-items:center;
     gap: 20px;
-    /* margin-top: 20px; */
-    /* padding: 0px 12px; */
+    padding: 0;
     background: #ffffff;
 }
 li{
     height: 8.33%;
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    /* margin-top: 10px; */
-    /* padding-left: 20px; */
     cursor:pointer;
     font-weight: 600;
     font-size: 1.1rem;
@@ -34,7 +31,7 @@ li{
 }
 a{
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     color: rgb(114, 114, 114);
     background: #ffffff;
@@ -44,10 +41,10 @@ a{
     /* justify-content: center; */
     align-items: center;
 }
-li,a:hover{
+a:hover{
     background: #f6f6f6;
     color: #0013c2;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     text-decoration: none;
 }
 
