--- a/frontend/src/Component_styles/Menubar.css
+++ b/frontend/src/Component_styles/Menubar.css
@@ -15,17 +15,17 @@
     justify-content: space-between;
 }
 .search-box{
-    width: 50%;
+    width: 40%;
     /* background: #000000; */
     display: flex;
     align-items: center;
 }
-.search-box input{
-    height: 50%;
+.search-input{
+    height: 55%;
     width: 60%;
     border-radius: 15px;
     padding-left: 10px;
-    border: none;
+    border: 2px solid rgba(0, 0, 0, 0.18);
     font-weight: 500;
 }
 .control-panel{
@@ -62,15 +62,16 @@
     /* color: antiquewhite; */
 }
 .search-btn{
-    background: #002aff;
+    background: transparent;
     position: relative;
-    right: 20px;
+    right: 40px;
     height: 50%;
-    width: 6%;
+    padding: 0;
+    width: 8%;
     border: none;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    color: #ffffff;
+    color: rgba(0, 0, 0, 0.18);
     /* font-weight: 800; */
     font-size: 15px;
     cursor: pointer;
