--- a/frontend/src/Page_styles/Login.css
+++ b/frontend/src/Page_styles/Login.css
@@ -80,6 +80,7 @@ h2{
     border: none;
     cursor: pointer;
     background-color: blue;
+    color:#ffffff;
 }
 .foet{
     text-decoration: none;
