--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -85,7 +85,7 @@ table{
     border: none;
     background: transparent;
     font-size: 18px;
-    color: blue;
+    color: yellow;
   }
   .delete-btn{
     border: none;
