--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -97,4 +97,13 @@ table{
   .view-btn:hover {
     background-color: #0056b3;
   }
+  .close-btn{
+    padding: 10px 15px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+    
   
