--- a/frontend/src/Page_styles/Security.css
+++ b/frontend/src/Page_styles/Security.css
@@ -104,18 +104,23 @@
     font-weight: 500;
 }
 .change-button{
-    height: 15%;
+    height: 20%;
     width: 90%;
     padding-left: 20px;
 }
 .change-button button{
-    height: 100%;
+    height: 90%;
     width: 15%;
-    border-radius: 10px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
     border: none;
-    background: #4187e9;
+    background: blue;
+    padding: 5px;
     color: white;
+    justify-content: center;
     font-weight: 600;
+    box-shadow: 2px 2px 5px solid rgba(90, 125, 188, 0.05);
 }
 .switch{
     height: 70%;
