--- a/frontend/src/Page_styles/Unit.css
+++ b/frontend/src/Page_styles/Unit.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
 }
 .input p{
     margin: 0;
@@ -25,4 +25,31 @@
 }
 .input_content{
     height:70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.input_content h3{
+    font-family: "Roboto" , sans-serif;
+    color: #565656;
+}
+.unit-table{
+    border: 2px solid rgba(60, 64, 67, 0.15);
+}
+tr{
+    border: 2px solid rgba(60, 64, 67, 0.15);
+
+}
+.add-btn{
+    width: 5%;
+    height: 25%;
+    border-radius: 50%;
+    border: none;
+    background: green;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
