--- a/frontend/src/Page_styles/Unit.css
+++ b/frontend/src/Page_styles/Unit.css
@@ -17,6 +17,7 @@
     font-weight: 600;
 }
 .input input{
+    margin:0;
     width: 40%;
     padding: 5px;
     border: none;
@@ -45,6 +46,7 @@ tr{
     height: 25%;
     border-radius: 50%;
     border: none;
+    margin:0;
     background: green;
     color: white;
     font-weight: 700;
