--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -100,7 +100,7 @@ table{
     border: none;
     background: transparent;
     font-size: 18px;
-    color: blue;
+    color: orange;
   }
   .delete-btn{
     border: none;
