--- a/frontend/src/Page_styles/AssetCapture.css
+++ b/frontend/src/Page_styles/AssetCapture.css
@@ -67,7 +67,7 @@
     border: none;
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
     border-radius: 5px;
-    padding-left: 10px;
+    padding: 7px;
     color: black;
     font-family: "Montserrat" ,sans-serif;
     font-size: 15px;
