--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -74,7 +74,7 @@ td{
     z-index: -1;
   }
   
-  .view-btn {
+  .view-btn,.close-btn {
     padding: 5px 10px;
     background-color: #007BFF;
     color: white;
@@ -192,7 +192,22 @@ td{
 .edit-entry button[type="button"]:hover {
   background-color: #ff5555; /* Darker grey for Cancel button hover */
 }
-
+.view{
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.barcode{
+  width: 100%;
+  height: 100%;
+}
+.view-container{
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
 /* Close Button */
 .edit-overlay-content button.close-btn {
   background-color: #dc3545;
