--- a/frontend/src/Page_styles/MisReport.css
+++ b/frontend/src/Page_styles/MisReport.css
@@ -48,6 +48,8 @@ header .logo {
 
 header h1 {
     font-size: 1.2em;
+    font-family: "Roboto" , sans-serif;
+    font-weight:600;
 }
 
 .date-range input {
