--- a/frontend/src/Page_styles/Sectionone.css
+++ b/frontend/src/Page_styles/Sectionone.css
@@ -4,8 +4,8 @@
     justify-content: center;
     gap: 20px;
     align-items: center;
-    width: 100%;
-    height: 100%;
+/*     width: 100%;
+    height: 100%; */
     /* border-bottom: 1px solid #c3c1c1; */
 }
 .first-section{
