--- a/frontend/src/Page_styles/Login.css
+++ b/frontend/src/Page_styles/Login.css
@@ -86,7 +86,7 @@ h2{
     width: 30%;
     padding: 5px;
     border-radius: 15px;
-    background: #d27946;
+    background: blue;
     color: #ffffff;
     border: none;
     font-weight: 600;
