--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -93,8 +93,8 @@
   
   .view-btn,.close-btn {
     padding: 5px 10px;
-    background-color: #ebebeb;
-    color: blue;
+    background-color: blue;
+    color: white;
     font-weight: 700;
     border: none;
     border-radius: 10px;
@@ -253,11 +253,11 @@
   justify-content: space-between;
 }
 .pagination{
-  background: #d7d7d7;
+  background: blue;
   border: none;
   padding: 5px;
   font-weight: 700;
-  color: blue;
+  color: white;
   font-size: 14px;
 }
 .pages{
