--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -236,7 +236,7 @@
 }
 /* Close Button */
 .edit-overlay-content button.close-btn {
-  background-color: #dc3545;
+  background-color: #c82333;
   color: white;
   border-radius: 5px;
   padding: 5px 10px;
