--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -9,6 +9,7 @@
 .inventory-table{
     padding: 15px;
     width: 95%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     /* border-radius: 10px; */
 }
 .table-header{
@@ -44,7 +45,7 @@
     text-align: left;
     background: #ffffff;
     color: #565656;
-    border: 1px solid #f2f2f2;
+/*     border: 1px solid #f2f2f2; */
 }
 
 .table-container h4{
