--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -10,6 +10,7 @@
     padding: 15px;
     width: 95%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border:none;
     /* border-radius: 10px; */
 }
 .table-header{
