--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -266,11 +266,11 @@
   justify-content: space-between;
 }
 .pagination{
-  background: #d7d7d7;
+  background: blue;
   border: none;
   padding: 5px;
   font-weight: 700;
-  color: blue;
+  color: white;
   font-size: 14px;
 }
 .pages{
