--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -101,7 +101,7 @@
   
   .view-btn{
     padding: 5px 10px;
-    background-color: blue;
+    background-color: #7870f7;
     color: white;
     font-weight: 700;
     border: none;
