--- a/frontend/src/Page_styles/Inventory.css
+++ b/frontend/src/Page_styles/Inventory.css
@@ -296,6 +296,9 @@
   flex-direction: row;
   gap: 5px;
   margin-top: 10px;
+  position:absolute;
+  left:2.5%;
+  bottom:2%;
 }
 .checked-in {
   color: rgb(255, 187, 0);
