--- a/frontend/src/Page_styles/Profiledropdown.css
+++ b/frontend/src/Page_styles/Profiledropdown.css
@@ -1,1 +1,58 @@
-
+.profile-dropdown-container {
+    position: absolute;
+    right: 17%;
+  }
+  
+  .profile-dropdown-container .dropdown-menu {
+    position: absolute;
+    top: 5px; /* Adjust this depending on the icon's position */
+    /* left: 50%; */
+    background-color: white;
+    width: 100px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    visibility: hidden; /* Initially hidden */
+    opacity: 0;
+    transition: opacity 0.3s ease, visibility 0s linear 0.6s;
+    z-index: 1000; /* Ensure it appears on top of other elements */
+  }
+  
+  .profile-dropdown-container .dropdown-menu.show {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+  
+  .dropdown-menu ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* margin: 10px; */
+  }
+  
+  .dropdown-menu li {
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .dropdown-menu li a {
+    text-decoration: none;
+    color: #565656;
+    display: flex;
+    align-items: center;
+    padding: 5px 20px;
+  }
+  
+  .dropdown-menu li a:hover {
+    background-color: #f1f1f1;
+    color: #7870f7;
+  }
+  
+  .menu-icon {
+    margin-right: 10px;
+  }
+  
