--- a/frontend/src/Page_styles/Dashboard.css
+++ b/frontend/src/Page_styles/Dashboard.css
@@ -5,10 +5,60 @@
 .dashboard-section{
     height:100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
-.section_1{
-    height:28%;
+.card-section{
+    height: 25%;
+    width: 100%;
+    /* background: #000; */
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    justify-content: center;
 }
-.section_2{
-    height:72%;
+.card{
+    border-radius: 15px;
+    padding: 10px;
+    width: 20%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border: none;
+}
+.card-info{
+    padding: 12px 7px;
+    /* background: #000; */
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    width: 20%;
+    text-align: center;
+    border-radius: 10px;
+    position: absolute;
+    top: -15px;
+    left: 15px;
+}
+.graph-section{
+    height: 55%;
+    width: 100%;
+    /* background: #000; */
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    padding: 25px 0px;
+}
+.graph{
+    border-radius: 10px;
+    padding: 10px;
+    width: 30%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border: none;
+    background: #ffffff;
+}
+.graph-info{
+    height: 60%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border-radius: 12px;
+    background: #000;
+    position: relative;
+    top: -30px;
 }
