--- a/frontend/src/Page_styles/Dashboard.css
+++ b/frontend/src/Page_styles/Dashboard.css
@@ -50,15 +50,54 @@
     border-radius: 10px;
     padding: 10px;
     width: 30%;
+    position: relative;
+    top: 20px;
+    /* height: 80%; */
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border: none;
-    background: #ffffff;
+    background: #bababa;
 }
 .graph-info{
-    height: 60%;
+    height: 70%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 12px;
     background: #000;
     position: relative;
-    top: -30px;
+    top: -50px;
 }
+.loading-bar-container {
+    /* margin-bottom: 15px; */
+    text-align: center;
+    width: 50%;
+  }
+  
+  .loading-bar-label {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .loading-bar-wrapper {
+    height: 50px; /* Control the height of the loading bar */
+    width: 50px;
+    background-color: #e0e0e0;
+    margin: 0 auto;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+  
+  .loading-bar {
+    width: 100%;
+    background-color: green;
+    transition: height 0.3s ease-in-out;
+  }
+  .asset-info{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 40px;
+    height: 60%;
+    width: 100%;
+  }
+  .asset-info p {
+    margin: 0;
+  }
